# api

./: README.md  app.js  bootstrap.sh  ecosystem.config.js  main.http  main.js  package-lock.json  package.json  pyproject.toml  test.rest  test_local.rest  update.ps1
database/: mongodb.js
html/: cookies.html  registry_list.html
src/sireg/: __main__.py
test/: index.html
test/js/: main.js
