[project]
name = "sireg"
dynamic = ["version"]
description = "Signal Registry API Server in Python"
authors = [
    {name = "Hüseyin YİĞİT", email = "yigit.hsyn@gmail.com"},
]
dependencies = [
  "flask>=3.1"
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Hardware",
    "Environment :: Console"
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
asycont600 = "sireg.__main__:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path   = "src/sireg/__init__.py"